# jupyter_plugin

./: CMakeLists.txt  JupyterInterpreter.cpp  JupyterInterpreter.h  JupyterPlugin.cpp  JupyterPlugin.h  PythonProcess.cpp  PythonProcess.h  README.md  exportdecl.h  irsl_debug.h  package.xml  requirements.txt
.github/workflows/: Dockerfile.testbuild  test-and-build.yaml
samples/: jupyter_buttons.py
share/jupyter/kernels/choreonoid/: kernel.json
src/lib/: CMakeLists.txt  PyMyScene.cpp  PythonProcess.cpp  PythonProcess.h  cnoid_interpreter.cpp  memo.txt  myscene.cpp  myscene.h  non_blocking_runner.hpp  rendermain.cpp  testmain.cpp
src/node/: CMakeLists.txt  choreonoid_jupyter.cpp
src/plugin/: CMakeLists.txt  JupyterBar.cpp  JupyterBar.h  JupyterInterpreter.cpp  JupyterInterpreter.h  JupyterPlugin.cpp  JupyterPlugin.h  PythonProcess.cpp  PythonProcess.h  cnoid_interpreter.cpp  cnoid_interpreter.hpp  exportdecl.h  irsl_debug.h
src/plugin/pybind11/: CMakeLists.txt  PyJupyterPluginModule.cpp
